# Backtesting

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vs_profiler_setting.bat
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
Backboard/Includes/Indicators/: Close.hpp  EndOfDay.hpp  ExponentialAverageTrueRange.hpp  ExponentialMovingAverage.hpp  High.hpp  Highest.hpp  Low.hpp  Lowest.hpp  Open.hpp  SimpleAverageTrueRange.hpp  SimpleMovingAverage.hpp  StandardDeviation.hpp  SwingHigh.hpp  SwingLow.hpp  TrueRange.hpp  Volume.hpp
Backboard/Includes/Strategies/: TestStrategy.hpp  TestStrategy2.hpp
Backboard/Sources/Indicators/: Close.cpp  EndOfDay.cpp  ExponentialAverageTrueRange.cpp  ExponentialMovingAverage.cpp  Highest.cpp  Lowest.cpp  SimpleAverageTrueRange.cpp  SimpleMovingAverage.cpp  StandardDeviation.cpp  SwingHigh.cpp  SwingLow.cpp
Backboard/Sources/Strategies/: TestStrategy.cpp
Includes/: Analyzer.hpp  Backtesting.hpp  BarHandler.hpp  BaseEngine.hpp  BaseFetcher.hpp  BaseOrderHandler.hpp  BinanceFetcher.hpp  Config.hpp  DataUtils.hpp  Engine.hpp  Indicator.hpp  Numeric.hpp  OrderHandler.hpp  Slippage.hpp  Strategy.hpp  TimeUtils.hpp
Includes/Engines/: Analyzer.hpp  Backtesting.hpp  BarData.hpp  BarDataManager.hpp  BarHandler.hpp  BaseAnalyzer.hpp  BaseBarHandler.hpp  BaseEngine.hpp  BaseFetcher.hpp  BaseOrderHandler.hpp  Binance.hpp  BinanceFetcher.hpp  Builder.hpp  Config.hpp  DataManager.hpp  DataUtils.hpp  Engine.hpp  Exception.hpp  Export.hpp  FetchManager.hpp  Indicator.hpp  Logger.hpp  Numeric.hpp  Order.hpp  OrderHandler.hpp  OrderManager.hpp  Plot.hpp  Print.hpp  Slippage.hpp  Strategy.hpp  StrategyLoader.hpp  SymbolInfo.hpp  TechnicalAnalyzer.hpp  TimeUtils.hpp  Trade.hpp
Includes/Indicators/: Close.hpp  ConstantValue.hpp  EndOfDay.hpp  ExponentialAverageTrueRange.hpp  ExponentialMovingAverage.hpp  High.hpp  Highest.hpp  Indicators.hpp  Low.hpp  Lowest.hpp  Open.hpp  RelativeStrengthIndex.hpp  SimpleAverageTrueRange.hpp  SimpleMovingAverage.hpp  StandardDeviation.hpp  SwingHigh.hpp  SwingLow.hpp  TrueRange.hpp  Volume.hpp  VolumeBoost.hpp  VolumeSimpleMovingAverage.hpp
Includes/Strategies/: DiceSystem.hpp  TestStrategy.hpp  TestStrategy2.hpp
Sources/Clients/: components.json  index.html  launch.js  package-lock.json  package.json  tsconfig.json
Sources/Clients/Apps/: App.css  App.tsx  Main.tsx  global.d.ts  index.css
Sources/Clients/Configs/: electron.builder.json  stylelint.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Sources/Clients/Electron/: Main.js  Preload.js
Sources/Clients/Scripts/: Build-Exe.cmd  Build.cmd
Sources/Clients/Servers/: BacktestingEngine.js  ChartDataHandler.js  Launch.js
Sources/Cores/Engines/: Analyzer.cpp  Backtesting.cpp  BarData.cpp  BarHandler.cpp  BaseBarHandler.cpp  BaseEngine.cpp  BaseFetcher.cpp  BaseOrderHandler.cpp  BinanceFetcher.cpp  Config.cpp  DataUtils.cpp  Engine.cpp  Indicator.cpp  Logger.cpp  Main.cpp  Order.cpp  OrderHandler.cpp  Plot.cpp  Slippage.cpp  Strategy.cpp  StrategyLoader.cpp  SymbolInfo.cpp  TimeUtils.cpp  Trade.cpp
Sources/Cores/Indicators/: ConstantValue.cpp  EndOfDay.cpp  ExponentialAverageTrueRange.cpp  ExponentialMovingAverage.cpp  High.cpp  Highest.cpp  Lowest.cpp  Open.cpp  RelativeStrengthIndex.cpp  SimpleAverageTrueRange.cpp  SimpleMovingAverage.cpp  StandardDeviation.cpp  SwingHigh.cpp  SwingLow.cpp  VolumeBoost.cpp  VolumeSimpleMovingAverage.cpp
Sources/Cores/Strategies/: TestStrategy.cpp  TestStrategy2.cpp
Sources/Cpp/: Analyzer.cpp  Backtesting.cpp  BarData.cpp  BarHandler.cpp  BaseBarHandler.cpp  BaseEngine.cpp  BaseFetcher.cpp  BaseOrderHandler.cpp  BinanceFetcher.cpp  Config.cpp  DataUtils.cpp  Engine.cpp  Indicator.cpp  Logger.cpp  Numeric.cpp  Order.cpp  OrderHandler.cpp  Plot.cpp  Slippage.cpp  Strategy.cpp  SymbolInfo.cpp  TimeUtils.cpp  Trade.cpp
Sources/Cpp/Engines/: Analyzer.cpp  Backtesting.cpp  BarData.cpp  BarDataManager.cpp  BarHandler.cpp  BaseAnalyzer.cpp  BaseBarHandler.cpp  BaseEngine.cpp  BaseFetcher.cpp  BaseOrderHandler.cpp  Binance.cpp  BinanceFetcher.cpp  Builder.cpp  Config.cpp  DataManager.cpp  DataUtils.cpp  Engine.cpp  FetchManager.cpp  Indicator.cpp  Logger.cpp  Numeric.cpp  Order.cpp  OrderBuilder.cpp  OrderHandler.cpp  OrderManager.cpp  Plot.cpp  Print.cpp  Slippage.cpp  Strategy.cpp  SymbolInfo.cpp  TechnicalAnalyzer.cpp  TimeUtils.cpp  Trade.cpp
Sources/Cpp/Indicators/: Close.cpp  EndOfDay.cpp  ExponentialAverageTrueRange.cpp  ExponentialMovingAverage.cpp  High.cpp  Highest.cpp  Low.cpp  Lowest.cpp  Open.cpp  SimpleAverageTrueRange.cpp  SimpleMovingAverage.cpp  StandardDeviation.cpp  SwingHigh.cpp  SwingLow.cpp  TrueRange.cpp  Volume.cpp
Sources/Cpp/Strategies/: DiceSystem.cpp  TestStrategy.cpp  TestStrategy2.cpp
Sources/Misc/HTML/: AreaSeriesTemplate.js
Sources/Py/: BarDataReader.py  ParquetReader.py  Visualization.py  test.py
Sources/html/: AreaSeriesTemplate.js  BaseChart.html  BaselineSeriesTemplate.js  HistogramSeriesTemplate.js  LineSeriesTemplate.js
Sources/html/backboard/: index.html  launch.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
Sources/html/chart/: BaseChart.html  BaselineSeriesTemplate.js  HistogramSeriesTemplate.js  LineSeriesTemplate.js
Sources/js/: build-to-exe.cmd  components.json  index.html  launch.js  package-lock.json  package.json  run.cmd  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
Sources/js/.run/: Run.run.xml
Sources/js/Backboard/: config.json  index.html  streaks.csv
Sources/js/config/: electron-builder.json  stylelint.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
Sources/js/electron/: main.js  preload.js
Sources/js/public/: config.json  trade_list.json
Sources/js/scripts/: No Console.bat  build-to-exe.cmd  patch-deprecations.js  run.cmd
Sources/js/server/: backtestingEngine.js  launch.js  (+3 more)
Tests/: BinanceDataManagerTest.cpp  BinanceDataManagerTest.hpp
(+280 files in other folders)
